# Social_Algorithms_Psets

./: .gitattributes  .gitignore  CENSUS_DATA.csv  CENSUS_DATA.json  README.md  bluesky_part1.3.2.py  data_label_mapping.py  how_git_works.md  pyproject.toml  requirements.txt  senator_follows_map.json  survey_analysis.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
Problem_Set_1/: CENSUS_DATA.csv  GPT_survey.py  TABULATE_API_QUERY.txt  answer_probabilities_raw_poststrat_and_differences.csv  census_analysis.py  compare_3_surveys.py  compare_surveys.py  comparison.py  dataset_explore.ipynb  get_raw_bin_probs.py  gpt_census_demo_comma_survey.csv  gpt_comma_survey.csv  gpt_survey_census_demo.py  mean_collection.py  post_strat_long_full_cartesian_FIXED_v2.csv  poststrat_gpt_bin_probs.csv  poststrat_gpt_minus_human_bin_probs.csv  poststrat_survey_bin_probs.csv  poststrat_viz_4.py  raw_gpt_bin_probs.csv  raw_survey_bin_probs.csv  survey_analysis.py  survey_poststrat.py
Problem_Set_2/pset2/: assignment_02.md  bluesky_helpers.py  bluesky_part1.2.py  bluesky_part1.2_tad.py  bluesky_part1.3.2.py  bluesky_part1.3.2_tad.py  (+54 more)
Problem_Set_3/: .judge_cache.json  assignment3_starter.py  judge.py  pairwise_analysis.py  pairwise_runner.py  pairwise_self_check.py  part2_analysis.py  part2_plots.py  part2_selfplay.py  scores_analysis.py  selfplay_runner.py
pset3_part1/: analyze.py  analyze_fruit.py  day_of_week_results.csv  final_analysis.py  fruit_results.csv  fruit_task.py  plot_comparison.py  prompt_comparison.csv  prompt_test.py  warmup.py
(+55 files in other folders)
