[project]
name = "social-algorithms-psets"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "jupyter",
  "ipykernel",
  "pytest",
  "ruff",
  "black",
  "isort",
  # PyTorch CPU build (good default for Codespaces)
  "torch",
  "torchvision",
  "torchaudio",
  "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
